--- a/public/css/index.css
+++ b/public/css/index.css
@@ -219,6 +219,12 @@ h1, h2, h3 {
   margin-bottom: 1.02em;
 }
 
+hr {
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
 /* UTILITY CLASSES */
 .tc {
   text-align: center;
